--- a/report/index.html
+++ b/report/index.html
@@ -7,24 +7,26 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width"/>
-    <link rel="icon" href='./favicon.svg'/>
+    <link rel="icon" href='../favicon.svg'/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
 <!--    <script src="../node_modules/flowbite/dist/flowbite.js"></script>-->
     <script src="https://cdn.tiny.cloud/1/a0ijmuegf97wcitfcjbqekt4zuq9huhhxhs82hblex68xzkd/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     
-		<link href="./_app/immutable/assets/0.896737f0.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c60638e7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.3856bc18.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.7bb94308.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.f5397308.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.3391ade5.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.94eed74d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Img.b040798a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/all-toast.store.a113fb1e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.2cd54b4a.js">
+		<link href="../_app/immutable/assets/0.896737f0.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/4.bcb48051.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.c60638e7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.3856bc18.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7bb94308.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.f5397308.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.3391ade5.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.94eed74d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Img.b040798a.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/all-toast.store.a113fb1e.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/4.d055c2c7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/local-storage.lib.4cb0e269.js">
     <title>Формирование заказа | KLIMOV.RED</title>
 </head>
 <body data-sveltekit-preload-data="hover">
@@ -60,11 +62,15 @@
 
 
 
+
+
+
+
 			
 			<script>
 				{
 					__sveltekit_mo3ke3 = {
-						base: new URL(".", location).pathname.slice(0, -1),
+						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
 
@@ -73,11 +79,11 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c60638e7.js"),
-						import("./_app/immutable/entry/app.3391ade5.js")
+						import("../_app/immutable/entry/start.c60638e7.js"),
+						import("../_app/immutable/entry/app.3391ade5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 2],
+							node_ids: [0, 4],
 							data,
 							form: null,
 							error: null
