--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <!--    <script src="../node_modules/flowbite/dist/flowbite.js"></script>-->
     <script src="https://cdn.tiny.cloud/1/a0ijmuegf97wcitfcjbqekt4zuq9huhhxhs82hblex68xzkd/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     
-		<link href="./_app/immutable/assets/0.896737f0.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.ca5f2804.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c60638e7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.dbc37d89.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.3856bc18.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.7bb94308.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e618a336.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.f5397308.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.3391ade5.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.94eed74d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.8150a3ec.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.c5c3065e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Img.b040798a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/all-toast.store.a113fb1e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.2cd54b4a.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.9a4daaf3.js">
     <title>Формирование заказа | KLIMOV.RED</title>
 </head>
 <body data-sveltekit-preload-data="hover">
@@ -60,10 +60,14 @@
 
 
 
+
+<div class="flex justify-center items-center h-[20vh]"><button class="inline-flex items-center px-5 py-2.5 font-medium text-center text-white bg-primary-600 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-700"><a href="/order">Перейти в заказы (демо) </a></button></div>
+
+
 			
 			<script>
 				{
-					__sveltekit_mo3ke3 = {
+					__sveltekit_dx7dgz = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -73,8 +77,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c60638e7.js"),
-						import("./_app/immutable/entry/app.3391ade5.js")
+						import("./_app/immutable/entry/start.dbc37d89.js"),
+						import("./_app/immutable/entry/app.8150a3ec.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
