--- a/report/index.html
+++ b/report/index.html
@@ -14,19 +14,19 @@
 <!--    <script src="../node_modules/flowbite/dist/flowbite.js"></script>-->
     <script src="https://cdn.tiny.cloud/1/a0ijmuegf97wcitfcjbqekt4zuq9huhhxhs82hblex68xzkd/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     
-		<link href="../_app/immutable/assets/0.896737f0.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/0.ca5f2804.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/4.bcb48051.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.c60638e7.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.dbc37d89.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.3856bc18.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7bb94308.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.e618a336.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.f5397308.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.3391ade5.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.94eed74d.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.8150a3ec.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.c5c3065e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Img.b040798a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/all-toast.store.a113fb1e.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/4.d055c2c7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/local-storage.lib.4cb0e269.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/4.a76fa9c4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/local-storage.lib.6c7646c7.js">
     <title>Формирование заказа | KLIMOV.RED</title>
 </head>
 <body data-sveltekit-preload-data="hover">
@@ -69,7 +69,7 @@
 			
 			<script>
 				{
-					__sveltekit_mo3ke3 = {
+					__sveltekit_dx7dgz = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -79,8 +79,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.c60638e7.js"),
-						import("../_app/immutable/entry/app.3391ade5.js")
+						import("../_app/immutable/entry/start.dbc37d89.js"),
+						import("../_app/immutable/entry/app.8150a3ec.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
