--- a/order/index.html
+++ b/order/index.html
@@ -16,11 +16,11 @@
     
 		<link href="../_app/immutable/assets/0.ca5f2804.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.dbc37d89.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.c28fa845.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.3856bc18.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.e618a336.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.3d15d3bc.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.f5397308.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.8150a3ec.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.dec37d97.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.c5c3065e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Img.b040798a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/all-toast.store.a113fb1e.js">
@@ -43,7 +43,7 @@
 
 
 
-<a href="/" title="Официальный сайт | KLIMOV.RED" class="flex items-center group" target="_blank"><img width="150" class="h-auto max-w-full" src="_app/immutable/assets/logo.aec5a0c7.png" alt="">
+<a href="/" title="Официальный сайт | KLIMOV.RED" class="flex items-center group" target="_blank"><img width="150" class="h-auto max-w-full" src="/_app/immutable/assets/logo.aec5a0c7.png" alt="">
         <span></span></a>
         <button type="button" class="focus:outline-none whitespace-normal m-0.5 rounded-lg focus:ring-2 p-1.5 focus:ring-gray-400  hover:bg-gray-100 dark:hover:bg-gray-600 ml-3 md:hidden" aria-label="Open main menu"><span class="sr-only">Open main menu</span>
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="h-6 w-6 shrink-0" aria-label="bars 3" fill="none" viewBox="0 0 24 24" stroke-width="2"><!-- HTML_TAG_START --><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"></path> <!-- HTML_TAG_END --></svg></button>
@@ -120,11 +120,11 @@
 <button id="dropdownDefaultButton" class="relative bg-[white] border border-[transparent] rounded-lg  text-sm z-0 ring-1 ring-gray-300 focus:shadow-outline focus:ring-blue-600 focus:border-blue-600 w-full mt-[1px] px-[12px] py-[7px] dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 text-gray" type="button" title="Выберите клиента..." ><div class="relative z-1 bg-[transparent] inline-flex justify-between items-center">
         <input class="z-[-1] w-full bg-white " value="Выберите клиента..." disabled>
         <svg class="w-2.5 h-2.5 ml-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"></path></svg></div></button>
-<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/company/avatar_company.svg" alt="ООО Транзит"></div>
+<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="orders-klimov-red-public/imgs/company/avatar_company.svg" alt="ООО Транзит"></div>
                     ООО Транзит</a>
-            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/company/avatar_company.svg" alt="ИП Иванов"></div>
+            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="orders-klimov-red-public/imgs/company/avatar_company.svg" alt="ИП Иванов"></div>
                     ИП Иванов</a>
-            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/company/avatar_company.svg" alt="Самозанятый Ласточкин"></div>
+            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="orders-klimov-red-public/imgs/company/avatar_company.svg" alt="Самозанятый Ласточкин"></div>
                     Самозанятый Ласточкин</a>
             </li></ul>
 </div></div>
@@ -146,9 +146,9 @@
 <button id="dropdownDefaultButton" class="relative bg-[white] border border-[transparent] rounded-lg  text-sm z-0 ring-1 ring-gray-300 focus:shadow-outline focus:ring-blue-600 focus:border-blue-600 w-full mt-[1px] px-[12px] py-[7px] dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 text-gray" type="button" title="Выберите менеджера..." ><div class="relative z-1 bg-[transparent] inline-flex justify-between items-center">
         <input class="z-[-1] w-full bg-white " value="Выберите менеджера..." disabled>
         <svg class="w-2.5 h-2.5 ml-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"></path></svg></div></button>
-<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/user/managers/manager.png" alt="Николай Поздняков"></div>
+<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="orders-klimov-red-public/imgs/user/managers/manager.png" alt="Николай Поздняков"></div>
                     Николай Поздняков</a>
-            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/user/avatar.svg" alt="Дмитрий Рудин"></div>
+            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="orders-klimov-red-public/imgs/user/avatar.svg" alt="Дмитрий Рудин"></div>
                     Дмитрий Рудин</a>
             </li></ul>
 </div></div>
@@ -170,9 +170,9 @@
 <button id="dropdownDefaultButton" class="relative bg-[white] border border-[transparent] rounded-lg  text-sm z-0 ring-1 ring-gray-300 focus:shadow-outline focus:ring-blue-600 focus:border-blue-600 w-full mt-[1px] px-[12px] py-[7px] dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 text-gray" type="button" title="Выберите сотрудника..." ><div class="relative z-1 bg-[transparent] inline-flex justify-between items-center">
         <input class="z-[-1] w-full bg-white " value="Выберите сотрудника..." disabled>
         <svg class="w-2.5 h-2.5 ml-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"></path></svg></div></button>
-<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/user/avatar.svg" alt="Эдуард Рябов"></div>
+<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="orders-klimov-red-public/imgs/user/avatar.svg" alt="Эдуард Рябов"></div>
                     Эдуард Рябов</a>
-            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/user/avatar.svg" alt="Василий Петров"></div>
+            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="orders-klimov-red-public/imgs/user/avatar.svg" alt="Василий Петров"></div>
                     Василий Петров</a>
             </li></ul>
 </div></div>
@@ -721,7 +721,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainergDG4zmqajLtJvvRryJHf_" class="flex flex-col overflow-auto max-w-[80vw]"></div>
+<div id="drawContainerV3sSPd6OlJf0dRNEdLQ5V" class="flex flex-col overflow-auto max-w-[80vw]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">2</th>
                         <td class="px-2 py-4">
@@ -880,7 +880,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContaineroJnWP_F-675hK5VLJS-gU" class="flex flex-col overflow-auto max-w-[80vw]"></div>
+<div id="drawContainerwjAWhxe5_driCJicssmQR" class="flex flex-col overflow-auto max-w-[80vw]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">3</th>
                         <td class="px-2 py-4">
@@ -1039,7 +1039,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerZ9FJ1WARiTLnAVzqfx3d1" class="flex flex-col overflow-auto max-w-[80vw]"></div>
+<div id="drawContainer8TuUIkKMz_gxvK1QJL2Ht" class="flex flex-col overflow-auto max-w-[80vw]"></div>
                             </div></div></div></td>
                     </tr></tbody></table>
 
@@ -1073,7 +1073,7 @@
 			
 			<script>
 				{
-					__sveltekit_dx7dgz = {
+					__sveltekit_1fj74fp = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -1083,8 +1083,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.dbc37d89.js"),
-						import("../_app/immutable/entry/app.8150a3ec.js")
+						import("../_app/immutable/entry/start.c28fa845.js"),
+						import("../_app/immutable/entry/app.dec37d97.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
