--- a/order/index.html
+++ b/order/index.html
@@ -1456,7 +1456,7 @@
         <div class="flex gap-2 justify-end mt-10"><button class="gap-1 inline-flex items-center px-5 py-2.5 font-medium text-center float-right text-white bg-primary-600 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-700">Посмотреть отчет в окне
             </button>
 
-            <button class="gap-1 px-5 py-2.5 font-medium text-center float-right text-white bg-primary-600 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-700"><a target="_blank" href="/report" class="inline-flex items-center">
+            <button class="gap-1 px-5 py-2.5 font-medium text-center float-right text-white bg-primary-600 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-700"><a target="_blank" href="/orders-klimov-red-public/report" class="inline-flex items-center">
 
 
 <svg class="" aria-hidden="true" fill="transparent" viewBox="0 0 20 20" width="18" data-view-component="true"><path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M1 18a.969.969 0 0 0 .933 1h12.134A.97.97 0 0 0 15 18M1 7V5.828a2 2 0 0 1 .586-1.414l2.828-2.828A2 2 0 0 1 5.828 1h8.239A.97.97 0 0 1 15 2v5M6 1v4a1 1 0 0 1-1 1H1m0 9v-5h1.5a1.5 1.5 0 1 1 0 3H1m12 2v-5h2m-2 3h2m-8-3v5h1.375A1.626 1.626 0 0 0 10 13.375v-1.75A1.626 1.626 0 0 0 8.375 10H7Z"></path></svg> Показать отчет
